trunk/Archive2/60/eecbf4724a1400/output
main.cpp:6:10: warning: empty parentheses interpreted as a function declaration [-Wvexing-parse]
    S bar();
         ^~
main.cpp:6:10: note: remove parentheses to declare a variable
    S bar();
         ^~
main.cpp:7:5: error: base of member reference is a function; perhaps you meant to call it with no arguments?
    bar.foo();
    ^~~
       ()
1 warning and 1 error generated.
