trunk/Archive2/60/eecbf4724a1400/main.cpp
struct S {
    void foo() {}
};

int main() {
    S bar();
    bar.foo();
}